# HADES

./: .gitignore  CMakeLists.txt  README.md
audio_plugins/: CMakeLists.txt
audio_plugins/_HADES_renderer_/: CMakeLists.txt  hades_renderer.jucer
audio_plugins/_HADES_renderer_/src/: EditWindow360.cpp  EditWindow360.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/resources/: HADESLookAndFeel.h  log2dSlider.cpp  log2dSlider.h
libs/: CMakeLists.txt
libs/ehades/include/: ehades.h
libs/ehades/src/: ehades.c  ehades_internal.c  ehades_internal.h
matlab/: CREATE_SIMULATED_ARRAY_RECORDINGS.m  RUN_ME.m  hades_analysis.m  hades_analysis_init.m  hades_synthesis.m  hades_synthesis_init.m
matlab/resources_/: hrirs.mat
matlab/utils/: afSTFTprocessFIRs.m  formulate_M_and_Cr.m
sofa/: hrirs.sofa
